# yolo_simple_conversion_tool

./: CMakeLists.txt  Project.rcc.cpp  README.md  app_icon.qrc  naoLong.rc
resource/: app_icon.qrc
resource/doc/: yolo.md
resource/scripts/: packet.iss  test_onnx.py  test_pt.py
src/: main.cpp
src/widget/: ui_yolocontrol.h  yolocontrol.cpp  yolocontrol.hpp  yolocontrol.ui
